--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.0.0-rc.0",
+    "@material-ui/lab": "^4.0.0-alpha.12",
+    "chart.js": "^2.8.0",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
