--- a/server/config.json
+++ b/server/config.json
@@ -1,9 +1,13 @@
 {
-    "admin": {
+    "client": {
+        "ip": "127.0.0.1",
+        "port": "3001"
+    },
+    "socket": {
         "ip": "127.0.0.1",
         "port": "3002"
     },
-    "client": {
+    "admin": {
         "ip": "127.0.0.1",
         "port": "3003"
     }
