--- a/admin/src/config.json
+++ b/admin/src/config.json
@@ -1,7 +1,7 @@
 {
     "api": {
-        "hostname": "localhost",
-        "port":  3003,
+        "hostname": "192.168.1.3",
+        "port":  3000,
         "protocol": "http"
     }
 }
