--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,6 +1,11 @@
 {
     "api": {
-        "hostname": "localhost",
+        "hostname": "192.168.1.2",
+        "port":  3000,
+        "protocol": "http"
+    },
+    "socket": {
+        "hostname": "192.168.1.2",
         "port":  3001,
         "protocol": "http"
     }
