use config for socket connection

--- a/client/src/config.json
+++ b/client/src/config.json
@@ -3,5 +3,10 @@
         "hostname": "localhost",
         "port":  3001,
         "protocol": "http"
+    },
+    "socket": {
+        "hostname": "localhost",
+        "port":  3002,
+        "protocol": "http"
     }
 }
