--- a/admin/src/config.json
+++ b/admin/src/config.json
@@ -3,5 +3,10 @@
         "hostname": "192.168.1.3",
         "port":  3000,
         "protocol": "http"
+    },
+    "client": {
+        "hostname": "192.168.1.2",
+        "port":  80,
+        "protocol": "http"
     }
 }
