--- a/admin/src/config.json
+++ b/admin/src/config.json
@@ -1,12 +1,12 @@
 {
     "api": {
-        "hostname": "192.168.1.3",
-        "port":  3000,
-        "protocol": "http"
+        "hostname": "api.ioleo.fr",
+        "port":  443,
+        "protocol": "https"
     },
     "client": {
-        "hostname": "192.168.1.2",
-        "port":  80,
-        "protocol": "http"
+        "hostname": "ioleo.fr",
+        "port":  443,
+        "protocol": "https"
     }
 }
