--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,12 +1,12 @@
 {
     "api": {
-        "hostname": "192.168.1.2",
-        "port":  3000,
-        "protocol": "http"
+        "hostname": "api.ioleo.fr",
+        "port":  443,
+        "protocol": "https"
     },
     "socket": {
-        "hostname": "192.168.1.2",
-        "port":  3001,
+        "hostname": "socket.ioleo.fr",
+        "port":  3000,
         "protocol": "http"
     }
 }
